welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: not found: type red
if(getCouleurSol():red) {x="S" }
                   ^